--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
           </p>
           <a class="mb-3" data-toggle="collapse" data-target="#more-raph">Read more...</a>
           <p id="more-raph" class="text-justify collapse" style="font-size:0.95rem">
-            <b>Current Assignment:</b> Also doin something
+            <b>Current Assignment:</b> Also doin something.
             <br>
             <b>Hobbies:</b> Eating and movie trips. Encouraging people and making others smile are his specialty.
             <br>
-            <b>Fun fact:</b> 
+            <b>Fun fact: Used to have a mohawk.</b> 
           </p>
         </div>
       </div>
